tests/purs/warning/DeprecatedRowKindSyntax.purs
-- @shouldWarnWith WarningParsingModule
module Main where

class R (a :: # Type)
